  `initramsys` environment.
- Added new `initramsys-installer` boot parameter.  This kicks off a
  dialog-based installer that prompts for topmost sqsh_layer, then does a
  system installation on auto-detected drives.  There isn't a manual drive
  setup yet, just the automatic selection of one (or multiple identically
  sized) drive(s) to be used in a ZFS pool.  See manpage for more details.

* v0.21.1
2024-10-14: Ruckusrd v0.21.1

- Fixed silly bug causing boot failures for non-ZFS hosts

* v0.21.0
2024-10-13: Ruckusrd v0.21.0

- Upgraded all subprojects to latest available versions as of 10/10/24.
- Support sqsh_layer= and sqsh_layerdev= when using ZFS
- Added firstboot_wizard, which runs if `firstboot` boot parameter is present
  (and if /sysroot/.ruckusrd_firstboot_done hasn't been created yet).  So far,
  it sets hostname, generates a new system uuid, sets root password, adds
  localadmin user, sets localadmin password, sets timezone, sets locale, and
  helps install some close-to-correct NetworkManager connection files.
- Added a ton of info to the ruckusrd.1 manpage (e.g., boot parameters,
  sqsh_layer explanation, usage examples, see also).

* v0.20.1
2024-10-04: RuckusRD v0.20.1

- Fixed bootup problems with Ubuntu 24.04, and anywhere else where /sbin/init
  is a relative symlink instead of an absolute one.

* v0.20.0
2024-10-01: RuckusRD v0.20.0

- Added --no-ucode flag to prevent addition of microcode (for testing).
- Preppended "ruckusrd:" to all initramfs messages, to better differentiate
  from kernel messages.
- Added new `initramsys` boot parameter to invoke the initramfs's init instead
  of switching rootfs and invoking the sysroot's init.  This gives us a more
  complete maintenance system (complete with multiple TTYs to login on) and
  opens the door for using a ruckusrd initramfs on it's own to facilitate
  installation on blank drives.
- Included Glibc's NSS shared libs on the initramfs, so things like dropbear